# tutor-scos

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/scos/: __about__.py  plugin.py
src/scos/app/scos/: urls.py  views.py
src/scos/app/scos/static/scos/css/: scos.css
src/scos/app/scos/static/scos/js/: scos.js
src/scos/app/scos/static/scos/js/course/: add.js  update.js
src/scos/app/scos/templates/scos/: base.html  scos.html
src/scos/app/scos/templates/scos/course/: add.html  all.html  course.html  update.html
src/scos/app/scos/templates/scos/course/components/: course_modify_table.html  name_and_mark_cells.html
src/scos/app/scos/templates/scos/user/: course.html  courses.html
src/scos/app/scos/utils/: auth.py  course.py  events.py  patch.py  scos_api.py  tasks.py  user.py
src/scos/patches/: lms-env  lms-env-features  openedx-dockerfile-pre-assets  openedx-lms-common-settings
