[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tutor-scos"
dynamic = ["version"]
dependencies = [
  "tutor>=17.0.1",
]
requires-python = ">=3.10"
authors = [
  { name="kosolapovlb", email="kosolapovlb@gmail.com" },
]
description = "Плагин для интеграции сборки OpenedX Tutor с ГИС СЦОС"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/cdot-ssau/tutor-scos"
Issues = "https://github.com/cdot-ssau/tutor-scos/issues"

[project.entry-points."tutor.plugin.v1"]
scos = "scos.plugin"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
